--- a/app/src/main/res/layout-land/activity_emotions.xml
+++ b/app/src/main/res/layout-land/activity_emotions.xml
@@ -75,7 +75,7 @@
         android:background="@color/purple"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/anxious_button"
+        app:layout_constraintEnd_toStartOf="@+id/worried_button"
         app:layout_constraintStart_toEndOf="@+id/sad_button" />
 
     <Button
@@ -94,7 +94,7 @@
         app:layout_constraintStart_toEndOf="@+id/jealous_button" />
 
     <Button
-        android:id="@+id/anxious_button"
+        android:id="@+id/worried_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
