--- a/app/src/main/res/layout-land/activity_congrats.xml
+++ b/app/src/main/res/layout-land/activity_congrats.xml
@@ -41,6 +41,7 @@
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
                 android:background="@color/colorPrimaryDark"
                 android:onClick="moreGames"
@@ -51,6 +52,7 @@
                 android:id="@+id/button8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
                 android:layout_weight="1"
                 android:background="@color/colorPrimary"
                 android:onClick="backToHome"
