--- a/app/src/main/res/layout-land/activity_games.xml
+++ b/app/src/main/res/layout-land/activity_games.xml
@@ -39,9 +39,9 @@
                     <ImageView
                         android:id="@+id/imageView2"
                         android:layout_width="320dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:adjustViewBounds="true"
-                        android:background="@drawable/placeholder"
+                        android:background="@drawable/happy_game"
                         android:cropToPadding="false" />
 
                     <TextView
@@ -51,7 +51,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Matching Game"
+                        android:text="Happiness Game"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -62,7 +62,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="Match the emotions to the facial expressions!" />
+                        android:text="Select the images that represent happiness!" />
 
                     <Button
                         android:id="@+id/button3"
@@ -71,8 +71,10 @@
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:onClick="playGame"
-                        android:text="Play" />
+                        android:background="@color/colorPrimaryDark"
+                        android:onClick="playGameHappy"
+                        android:text="Play"
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -82,41 +84,44 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imageView6"
+                        android:id="@+id/imageView66"
                         android:layout_width="320dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:adjustViewBounds="true"
-                        android:background="@drawable/placeholder"
+                        android:background="@drawable/sad_game"
                         android:cropToPadding="false" />
 
                     <TextView
-                        android:id="@+id/textView10"
+                        android:id="@+id/textView100"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Matching Game"
+                        android:text="Sadness Game"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/textView110"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="Match the emotions to the facial expressions!" />
+                        android:text="Select the images that represent sadness" />
 
                     <Button
-                        android:id="@+id/button5"
+                        android:id="@+id/button50"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Play" />
+                        android:background="@color/colorPrimaryDark"
+                        android:onClick="playGameSad"
+                        android:text="Play"
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -128,9 +133,9 @@
                     <ImageView
                         android:id="@+id/imageView6"
                         android:layout_width="320dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:adjustViewBounds="true"
-                        android:background="@drawable/placeholder"
+                        android:background="@drawable/worried_game"
                         android:cropToPadding="false" />
 
                     <TextView
@@ -140,7 +145,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Matching Game"
+                        android:text="Anxiety Game"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -151,7 +156,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="4dp"
-                        android:text="Match the emotions to the facial expressions!" />
+                        android:text="Select the images that represent anxiety" />
 
                     <Button
                         android:id="@+id/button5"
@@ -160,7 +165,10 @@
                         android:layout_gravity="right"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="16dp"
-                        android:text="Play" />
+                        android:background="@color/colorPrimaryDark"
+                        android:onClick="playGameWorried"
+                        android:text="Play"
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
             </LinearLayout>
